--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -17,7 +17,12 @@
 
 body {
     font-family: 'League Spartan', sans-serif;
+    user-select: none;
 }
+
+img, picture {
+    width: 100%;
+    display: block;
 
 .discover-section-a {
     display: flex;
@@ -135,6 +140,7 @@ nav li {
     }
 
     .section-1 {
+        background-image: url("../../images/desktop-image-hero-1.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -228,6 +234,7 @@ nav li {
         width: 100%;
         overflow: hidden;
         height: 60vh;
+        background-image: url("../../images/mobile-image-hero-1.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
